Made the certificateNav responsive to the same screen width as its font so the layout change looks more seamless and the nav height looks better on mobile; fixed a bug in the horizontal scrolling layout of the ImageWindow component on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -268,7 +268,7 @@ h1, h3 {
   justify-content: space-evenly;
   align-items: stretch;
   width: 100%;
-  height: 20vh;
+  height: 10vh;
   background-color: var(--darkgray);
 }
 
@@ -288,6 +288,12 @@ h1, h3 {
   cursor: pointer;
 }
 
+@media (min-width: 640px) {
+  .certificatesNav {
+    height: 20vh;
+  }
+}
+
 /*////////////////////////////
 //////// CERTIFICATES ////////
 ////////////////////////////*/
@@ -302,7 +308,7 @@ h1, h3 {
 .imageWindow {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   overflow-x: scroll;
   overflow-y: hidden;
